<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/toolBar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:contentDescription="@string/bg"
        android:padding="2dp"
        android:scaleType="fitXY"
        android:src="@drawable/bg" />

    <ImageView
        android:id="@+id/bigAlbumImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="@color/mainColor"
        android:contentDescription="@string/albumPicture"
        android:padding="32dp"
        android:scaleType="fitXY"
        android:src="@drawable/defaultalbum" />

    <RelativeLayout
        android:id="@+id/controlPanel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.17"
        android:gravity="bottom|center"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/playPauseImageButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/mainColor"
            android:contentDescription="@string/play"
            android:scaleType="fitXY"
            android:src="@drawable/play" />

        <ImageButton
            android:id="@+id/nextImageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@id/playPauseImageButton"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_toEndOf="@id/playPauseImageButton"
            android:layout_toRightOf="@id/playPauseImageButton"
            android:background="@color/mainColor"
            android:contentDescription="@string/next"
            android:scaleType="fitXY"
            android:src="@drawable/next" />

        <ImageButton
            android:id="@+id/prevImageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@id/playPauseImageButton"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_toLeftOf="@id/playPauseImageButton"
            android:layout_toStartOf="@id/playPauseImageButton"
            android:background="@color/mainColor"
            android:contentDescription="@string/prev"
            android:scaleType="fitXY"
            android:src="@drawable/prev" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="0.1"
        android:paddingEnd="4dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingStart="4dp">

        <TextView
            android:id="@+id/nowPlayingSongTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/timeTextView"
            android:layout_toLeftOf="@id/durationTextView"
            android:layout_toRightOf="@id/timeTextView"
            android:layout_toStartOf="@id/durationTextView"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            tools:text="Song name goes here" />

        <SeekBar
            android:id="@+id/progressSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/songNameTextView" />

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/zeroTime"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/durationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/durationTime"
            android:textColor="@android:color/white"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white" />

    <Button
        android:id="@+id/backButton"
        style="@style/Base.Widget.AppCompat.Toolbar.Button.Navigation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:background="@color/mainColor"
        android:onClick="goBack"
        android:padding="8dp"
        android:text="@string/back"
        android:textColor="@android:color/white" />
</LinearLayout>